feat: add registration SMS login and password reset
